
SET( DEFAULT_FONTS
${CMAKE_CURRENT_SOURCE_DIR}/Crysta.ttf
${CMAKE_CURRENT_SOURCE_DIR}/arial.ttf
${CMAKE_CURRENT_SOURCE_DIR}/arialbd.ttf
${CMAKE_CURRENT_SOURCE_DIR}/comic.ttf
${CMAKE_CURRENT_SOURCE_DIR}/comicbd.ttf
${CMAKE_CURRENT_SOURCE_DIR}/cour.ttf
${CMAKE_CURRENT_SOURCE_DIR}/courbd.ttf
${CMAKE_CURRENT_SOURCE_DIR}/courbi.ttf
${CMAKE_CURRENT_SOURCE_DIR}/couri.ttf
${CMAKE_CURRENT_SOURCE_DIR}/lucon.ttf
)
SET( BASE_IMAGES
${CMAKE_CURRENT_SOURCE_DIR}/frame_border.png
${CMAKE_CURRENT_SOURCE_DIR}/sky.jpg
)

if( BUILD_INTERSHELL )
INSTALL( 
  FILES
    ${DEFAULT_FONTS}
  DESTINATION
    ${DATA_INSTALL_PREFIX}/fonts
)


INSTALL( 
  FILES
    ${BASE_IMAGES}
  DESTINATION
    ${DATA_INSTALL_PREFIX}/images
)
endif( BUILD_INTERSHELL )


if( INSTALL_FRAME_BORDER )
   
  INSTALL( 
    FILES
      ${CMAKE_CURRENT_SOURCE_DIR}/frame_border.png
    DESTINATION
      ${INSTALL_FRAME_BORDER}
  )
endif( INSTALL_FRAME_BORDER )


